--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
                     
                     <!-- Portfolio Control Buttons [ END ] -->
                     
-                    <div class="projet-items clearfix" id="projects">
+                    <!--div class="projet-items clearfix" id="projects" -->
 
 
                         <!-- Portfolio Image -->
